--- a/Code/qtiplot/MantidQt/CustomDialogs/inc/CreateSampleShapeDialog.ui
+++ b/Code/qtiplot/MantidQt/CustomDialogs/inc/CreateSampleShapeDialog.ui
@@ -107,6 +107,19 @@
       </spacer>
      </item>
      <item>
+      <widget class="QPushButton" name="helpButton" >
+       <property name="maximumSize" >
+        <size>
+         <width>25</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="text" >
+        <string>?</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="createBtn" >
        <property name="text" >
         <string>Create Shape</string>
