Updates to SANS2D analysis following Richard's comments. Still need to work out the correct thing to do for moving the components. Re #636

--- a/Code/qtiplot/MantidQt/CustomInterfaces/inc/SANSRunWindow.ui
+++ b/Code/qtiplot/MantidQt/CustomInterfaces/inc/SANSRunWindow.ui
@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>778</width>
-    <height>378</height>
+    <height>393</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -28,7 +28,7 @@
       <string notr="true" />
      </property>
      <property name="currentIndex" >
-      <number>0</number>
+      <number>1</number>
      </property>
      <property name="elideMode" >
       <enum>Qt::ElideNone</enum>
@@ -835,6 +835,9 @@
             <height>0</height>
            </size>
           </property>
+          <property name="alignment" >
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
          </widget>
         </item>
         <item>
@@ -926,9 +929,15 @@
         <rect>
          <x>9</x>
          <y>-1</y>
-         <width>470</width>
+         <width>449</width>
          <height>173</height>
         </rect>
+       </property>
+       <property name="sizePolicy" >
+        <sizepolicy vsizetype="Preferred" hsizetype="MinimumExpanding" >
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
        </property>
        <property name="title" >
         <string>Limits</string>
@@ -1068,6 +1077,18 @@ p, li { white-space: pre-wrap; }
         </item>
         <item row="2" column="6" >
          <widget class="QComboBox" name="wav_dw_opt" >
+          <property name="sizePolicy" >
+           <sizepolicy vsizetype="Fixed" hsizetype="Ignored" >
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize" >
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
           <item>
            <property name="text" >
             <string>Linear</string>
@@ -1082,6 +1103,24 @@ p, li { white-space: pre-wrap; }
         </item>
         <item row="3" column="6" >
          <widget class="QComboBox" name="q_dq_opt" >
+          <property name="sizePolicy" >
+           <sizepolicy vsizetype="Fixed" hsizetype="Expanding" >
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize" >
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize" >
+           <size>
+            <width>70</width>
+            <height>16777215</height>
+           </size>
+          </property>
           <item>
            <property name="text" >
             <string>Linear</string>
@@ -1096,6 +1135,12 @@ p, li { white-space: pre-wrap; }
         </item>
         <item row="4" column="6" >
          <widget class="QComboBox" name="qy_dqy_opt" >
+          <property name="sizePolicy" >
+           <sizepolicy vsizetype="Fixed" hsizetype="Ignored" >
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <item>
            <property name="text" >
             <string>Linear</string>
@@ -1219,10 +1264,10 @@ p, li { white-space: pre-wrap; }
       <widget class="QGroupBox" name="groupBox_6" >
        <property name="geometry" >
         <rect>
-         <x>489</x>
-         <y>186</y>
+         <x>490</x>
+         <y>192</y>
          <width>258</width>
-         <height>144</height>
+         <height>150</height>
         </rect>
        </property>
        <property name="title" >
@@ -1264,24 +1309,48 @@ p, li { white-space: pre-wrap; }
       <widget class="QGroupBox" name="groupBox_7" >
        <property name="geometry" >
         <rect>
-         <x>179</x>
-         <y>191</y>
-         <width>184</width>
-         <height>88</height>
+         <x>11</x>
+         <y>185</y>
+         <width>282</width>
+         <height>136</height>
         </rect>
        </property>
        <property name="title" >
-        <string>Beam Centre(mm)</string>
+        <string>Position Information</string>
        </property>
-       <layout class="QHBoxLayout" name="horizontalLayout" >
-        <item>
+       <layout class="QGridLayout" name="gridLayout_7" >
+        <item row="0" column="0" >
          <widget class="QLabel" name="label_30" >
+          <property name="text" >
+           <string>Beam Centre (mm)</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2" >
+         <widget class="QLineEdit" name="beam_x" >
+          <property name="text" >
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="4" >
+         <widget class="QLineEdit" name="beam_y" />
+        </item>
+        <item row="1" column="0" >
+         <widget class="QLabel" name="label_31" >
+          <property name="text" >
+           <string>Sample z-offset (mm)</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2" colspan="2" >
+         <widget class="QLineEdit" name="smpl_offset" />
+        </item>
+        <item row="0" column="1" >
+         <widget class="QLabel" name="label_32" >
           <property name="font" >
            <font>
-            <pointsize>14</pointsize>
-            <weight>50</weight>
-            <bold>false</bold>
-            <kerning>true</kerning>
+            <pointsize>16</pointsize>
            </font>
           </property>
           <property name="text" >
@@ -1289,15 +1358,40 @@ p, li { white-space: pre-wrap; }
           </property>
          </widget>
         </item>
-        <item>
-         <widget class="QLineEdit" name="beam_x" >
+        <item row="0" column="5" >
+         <widget class="QLabel" name="label_44" >
+          <property name="font" >
+           <font>
+            <pointsize>16</pointsize>
+           </font>
+          </property>
           <property name="text" >
-           <string/>
+           <string>)</string>
           </property>
          </widget>
         </item>
-        <item>
-         <widget class="QLabel" name="label_31" >
+        <item row="2" column="2" >
+         <widget class="QLineEdit" name="phi_min" />
+        </item>
+        <item row="2" column="4" >
+         <widget class="QLineEdit" name="phi_max" />
+        </item>
+        <item row="2" column="0" >
+         <widget class="QLabel" name="label_45" >
+          <property name="text" >
+           <string>Phi (degrees)</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="3" >
+         <widget class="QLabel" name="label_33" >
+          <property name="text" >
+           <string>to</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="3" >
+         <widget class="QLabel" name="label_46" >
           <property name="font" >
            <font>
             <pointsize>14</pointsize>
@@ -1308,58 +1402,15 @@ p, li { white-space: pre-wrap; }
           </property>
          </widget>
         </item>
-        <item>
-         <widget class="QLineEdit" name="beam_y" />
-        </item>
-        <item>
-         <widget class="QLabel" name="label_32" >
-          <property name="font" >
-           <font>
-            <pointsize>14</pointsize>
-           </font>
-          </property>
-          <property name="text" >
-           <string>)</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </widget>
-      <widget class="QGroupBox" name="groupBox_8" >
-       <property name="geometry" >
-        <rect>
-         <x>16</x>
-         <y>191</y>
-         <width>148</width>
-         <height>88</height>
-        </rect>
-       </property>
-       <property name="title" >
-        <string>Phi (degrees)</string>
-       </property>
-       <layout class="QGridLayout" name="gridLayout_5" >
-        <item row="0" column="0" >
-         <widget class="QLineEdit" name="phi_min" />
-        </item>
-        <item row="0" column="2" >
-         <widget class="QLineEdit" name="phi_max" />
-        </item>
-        <item row="0" column="1" >
-         <widget class="QLabel" name="label_33" >
-          <property name="text" >
-           <string>to</string>
-          </property>
-         </widget>
-        </item>
        </layout>
       </widget>
       <widget class="QGroupBox" name="groupBox_9" >
        <property name="geometry" >
         <rect>
-         <x>376</x>
-         <y>190</y>
-         <width>97</width>
-         <height>88</height>
+         <x>353</x>
+         <y>225</y>
+         <width>89</width>
+         <height>68</height>
         </rect>
        </property>
        <property name="title" >
@@ -1375,6 +1426,13 @@ p, li { white-space: pre-wrap; }
         </item>
        </layout>
       </widget>
+      <zorder>groupBox_4</zorder>
+      <zorder>groupBox_5</zorder>
+      <zorder>groupBox_6</zorder>
+      <zorder>groupBox_7</zorder>
+      <zorder>groupBox_8</zorder>
+      <zorder>groupBox_9</zorder>
+      <zorder>beam_x</zorder>
      </widget>
      <widget class="QWidget" name="tab_4" >
       <attribute name="title" >
@@ -1728,10 +1786,6 @@ p, li { white-space: pre-wrap; }
   <tabstop>all_spec_max</tabstop>
   <tabstop>tof_min</tabstop>
   <tabstop>tof_max</tabstop>
-  <tabstop>beam_x</tabstop>
-  <tabstop>beam_y</tabstop>
-  <tabstop>phi_min</tabstop>
-  <tabstop>phi_max</tabstop>
   <tabstop>direct_file</tabstop>
   <tabstop>hab_file</tabstop>
   <tabstop>flat_file</tabstop>
